managed to render a sphere

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,6 @@ project(MG)
 #set(CMAKE_POSITION_INDEPENDENT_CODE ON) # -fPIC equivalent
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
 include_directories(
-        src/gKit
         src/GalinStuff
         src/Tree/Shapes
         src/Tree/Operations
@@ -19,16 +18,20 @@ link_libraries(
 )
 
 add_library(galinKit OBJECT
-        src/GalinStuff/box.h
         src/GalinStuff/box.cpp
-        src/GalinStuff/camera.h
+        src/GalinStuff/box.h
         src/GalinStuff/camera.cpp
+        src/GalinStuff/camera.h
         src/GalinStuff/color.h
         src/GalinStuff/evector.cpp
+        src/GalinStuff/implicits.cpp
         src/GalinStuff/implicits.h
         src/GalinStuff/mathematics.h
+        src/GalinStuff/mesh.cpp
         src/GalinStuff/mesh.h
+        src/GalinStuff/meshcolor.cpp
         src/GalinStuff/meshcolor.h
+        src/GalinStuff/ray.cpp
         src/GalinStuff/ray.h
         src/GalinStuff/triangle.cpp
         )
