--- a/src/tests/CMakeLists.txt
+++ b/src/tests/CMakeLists.txt
@@ -13,3 +13,27 @@ add_executable(toreTest
     toreTest.cpp
 )
 
+add_executable(translationTest
+    $<TARGET_OBJECTS:treeKit>
+    translationTest.cpp
+)
+
+add_executable(unionTest
+    $<TARGET_OBJECTS:treeKit>
+    unionTest.cpp
+)
+
+add_executable(differenceTest
+    $<TARGET_OBJECTS:treeKit>
+    differenceTest.cpp
+)
+
+add_executable(smoothUnionTest
+    $<TARGET_OBJECTS:treeKit>
+    smoothunionTest.cpp
+)
+
+add_executable(smoothDiffTest
+    $<TARGET_OBJECTS:treeKit>
+    smoothdiffTest.cpp
+)
